--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             
             <div class="search">
                 <input type="text" placeholder="Search for a city...">
-                <button><img src="/images/loupe.png" alt="Search button"></button>
+                <button><img src="./images/loupe.png" alt="Search button"></button>
             </div>
 
             <div class="error">
